--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -2,15 +2,15 @@ name: eShopOnWeb B&T
 
 #Triggers (uncomment line below to use it)
 on: [push, workflow_dispatch]
-on: workflow_dispatch
+# on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP:rg-FiapCloudSec 
-  LOCATION:eastus 
+  RESOURCE-GROUP: rg-FiapCloudSec 
+  LOCATION: eastus 
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
-  SUBSCRIPTION-ID:ea33c507-febe-4cf2-a4b2-c151a43c948d
-  WEBAPP-NAME:myapplication
+  SUBSCRIPTION-ID: ea33c507-febe-4cf2-a4b2-c151a43c948d
+  WEBAPP-NAME: my4146application
 
 
 jobs:
